@@ -1,3 +1,6 @@
+12/13/18
+  -Added GetModuleProperties()
+
 12/10/18
   -Check status of ForwardOpen rather than assume that it was successful
   -Allow users to provide the data type to eliminate the initial read
